# cs1090b_HallucinationLegalRAGChatbots

./: .env  .env.template  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Makefile  Project_Group_#43_Notebook_Submission_v01 .ipynb  README.md  SECURITY.md  conftest.py  lepard_4M.dvc  lepard_train_4000000_rev0194f95.jsonl.dvc  lepard_train_4000000_rev0194f95.jsonl.manifest.json  lepard_train_4000000_rev0194f95.jsonl.sha256  pyproject.toml  setup.sh
.dvc/: config
.github/workflows/: ci.yml
artifacts/: ms3_infrastructure.png.dvc  ms3_pipeline.png.dvc  ms4_stratified_heatmap.png.dvc
artifacts/eda_ms3_lepard/: summary.json
config/: lepard.yaml
configs/data/: legal_rag.yaml  legal_rag_explore.yaml
data/processed/: final_summary.json  lepard_cl_verified_subset.jsonl.dvc
data/processed/baseline/: .gitignore  bge_m3_results.jsonl.dvc  bge_m3_summary.json.dvc  bm25_results.jsonl.dvc  bm25_summary.json  corpus_chunks.jsonl.dvc  corpus_chunks_cleaned.jsonl.dvc  corpus_chunks_enriched.jsonl.dvc  corpus_chunks_opinion_sample.jsonl.dvc  eval_summary.json  summary.json  verified_split_summary.json
data/processed/baseline/cleaned/: bge_m3_results.eval.json  bge_m3_results.jsonl.dvc  bge_m3_results.stratified.json  bge_m3_summary.json  (+20 more)
data/processed/finetune/: hard_negatives.jsonl.dvc  hard_negatives.val.jsonl.dvc
data/processed/hallucination/: hallucination_summary.json
data/raw/: cl_bulk.dvc  cl_federal_appellate_bulk.dvc
docs/: REPRODUCIBILITY.md
docs/decisions/: 0001-bm25-sbatch-partition.md
lepard_eda/: LEPARD_SUMMARY.md  api_overlap_results.jsonl  api_overlap_results_v2.jsonl  api_overlap_summary.json  cite_overlap_summary.json  lepard_cl_cite_overlap.py  lepard_cl_text_overlap_api.py  lepard_eda.py  lepard_text_overlap.py  text_overlap_summary.json
notebooks/: Project_Group_#43_MS3_GPU_v01.ipynb  Project_Group_#43_MS4_GPU_v01.ipynb  Project_Group_#43_Submission_GCS_v01.ipynb  Project_Group_#43_Submission_v01.ipynb  Project_Group_#43_notebook_v07.ipynb  Project_Group_#43_notebook_v08_CPU.ipynb  cs1090b_HallucinationLegalRAGChatbots.ipynb  cs1090b_HallucinationLegalRAGChatbots.md  cs1090b_ms4_main_group_#43.ipynb  cs1090b_ms4_main_group_#43_v01.ipynb  cs1090b_ms4_report_group_#43_v01.docx  data_preprocessing.ipynb
notebooks/Milestone 4 - Final Deliverables/: cs1090b_ms4_main_group_#43_v01.ipynb
outputs/: dataset_probe.txt  setup.sh.txt
scripts/: aggregate_judgments.py  audit_dvc_tracking.py  audit_jsonl_nan.py  baseline_bge_m3.py  baseline_bge_m3.sbatch  baseline_bge_m3_multigpu.sbatch  baseline_bm25.py  baseline_bm25.sbatch  baseline_eval.py  baseline_prep.py  baseline_reranker.py  baseline_reranker_multigpu.sbatch  baseline_rrf.py  bench_bge_m3.py  bench_bge_m3.sbatch  bootstrap_env.sh  build_lepard_cl_subset.py  ci_audit_report.py  ci_write_env.py  clean_corpus.py  clean_corpus_worker.py  clean_gold_pairs.py  clean_query.py  demo_lepard_cl_compat.py  diagnose_lepard_cl_mismatch.py  diagnose_stage4.sbatch  download_datasets.sh  eda_ms3_corpus.py  eda_ms3_lepard.py  eda_text_length.py  finetune_reranker.py  finetune_reranker.sbatch  hallucination_judge.py  ingest_lepard.py  inspect_dvc_remote.py  judge_watchdog.py  lib.sh  manifest.sh  merge_bge_m3_shards.py  merge_rag_generations.py  (+45 more)
scripts/diagnostics/: diag_01_gold_cleaning.py  diag_02_corpus_cleaning.py  diag_03_retrieval_quality.py  diag_04_reranker_truncation.py  diag_05_reranker_vs_rrf.py
scripts/hooks/: block_credentials.sh  block_env_files.sh  block_large_files.sh  pre_push_coverage.sh  pre_push_security.sh  verify_staging.sh
scripts/viz/: plot_stratified_heatmap.py
src/: bulk_download.py  config.py  data_contracts.py  dataset_card.py  dataset_config.py  dataset_loader.py  dataset_probe.py  drift_check.py  dvc_tracking.py  eda_schemas.py  environment.py  exceptions.py  extract.py  filter_chain.py  gcs_utils.py  hf_export.py  ingest.py  lepard_cl_compat.py  lightning_datamodule.py  manifest.py  manifest_collector.py  model_loader.py  pipeline.py  repro.py  row_normalizer.py  row_validator.py  s3_discovery.py  schemas.py  split.py  timer.py  validation.py  wandb_lineage.py  wandb_logger.py
src/notebook_cells/: cell0_bootstrap.py  cell25_wandb_repro.py
src/ops/: __init__.py  slurm_job.py
src/viz/: __init__.py  pipeline_diagram.py
tests/: conftest.py  test_aggregate_judgments.py  test_audit_jsonl_nan.py  test_baseline_bge_m3.py  test_baseline_bm25.py  test_baseline_bm25_verified.py  test_baseline_eval.py  test_baseline_prep.py  test_baseline_prep_cluster_id.py  test_baseline_prep_verified.py  test_baseline_reranker.py  test_baseline_reranker_maxp.py  test_baseline_reranker_resume.py  test_baseline_reranker_resume_merged.py  test_baseline_rrf.py  test_build_lepard_cl_subset.py  test_bulk_download.py  test_cell0_bootstrap.py  test_cell25_orchestration.py  test_clean_corpus.py  test_clean_corpus_subprocess_shards.py  test_clean_gold_pairs.py  test_clean_query.py  test_config.py  test_data_contracts.py  test_dataset_card.py  test_dataset_loader.py  test_dataset_probe.py  test_dataset_probe_contract.py  test_dataset_probe_edge_cases.py  test_dataset_probe_fixtures.py  test_dataset_probe_loader.py  test_dataset_probe_normalization.py  test_dataset_probe_quality_signals.py  test_dataset_probe_reproducibility.py  test_dataset_probe_v2.py  test_demo_lepard_cl_compat.py  test_diagnose_lepard_cl_mismatch.py  test_drift_check.py  test_dvc_local_s3_sync.py  (+73 more)
tests/fixtures/: cl_matched_courts.json  courtlistener_checksums.py  courtlistener_fixtures.py  courtlistener_sample.json  courtlistener_sample.jsonl  courts.csv  dockets.csv  lepard_sample_1k.jsonl  mini_shard.jsonl  opinion-clusters.csv  opinions.csv
tests/shell/: helpers.bash  setup_suite.bash  test_artifact_verification.bats  test_baseline_bge_m3_sbatch.bats  test_baseline_bm25_sbatch.bats  test_bootstrap_env.bats  test_failure_paths.bats  test_lib.bats  test_monitor_baseline.bats  test_preflight.bats  test_run_baseline_bm25.bats  test_run_baseline_prep.bats  test_verify_dvc.bats
tests/unit/: test_repro_placeholder.py
(+49 files in other folders)
