[project]
name = "hallucination-legal-rag-chatbots-gpu"
version = "0.1.0"
description = "GPU pipeline: data processing, embedding generation, model training, evaluation"
requires-python = ">=3.11"
dependencies = [
  "ipykernel",
  "jupyterlab",
  "datasets>=2.16",
  "pandas>=2.2.0",
  "numpy>=1.24.0,<2.0.0",
  "torch>=2.0",
  "transformers>=4.35,<4.40",
  "sentence-transformers>=2.2",
  "accelerate>=0.20",
  "peft>=0.7",
  "gensim>=4.3",
  "spacy>=3.7",
  "langchain>=0.1",
  "faiss-cpu>=1.7",
  "networkx>=3.4.0",
  "evaluate>=0.4",
  "ragas>=0.1",
  "rouge-score>=0.1",
  "wandb>=0.16",
  "scikit-learn>=1.5.0",
  "matplotlib",
  "seaborn>=0.13.0",
  "requests",
  "pillow",
  "ipywidgets>=8.1.8",
  "python-dotenv>=1.0",
  "tqdm>=4.66",
]
[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "types-requests>=2.32.4.20260107",
    "pandas-stubs>=2.2",
    "pip-audit>=2.7",
    "cyclonedx-bom>=4.4",
    "ruff>=0.4",
]
[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:importlib._bootstrap",
]
markers = [
    "unit: Pure function tests, no I/O",
    "integration: Pipeline on frozen fixtures",
    "contract: Schema, provenance, quality thresholds",
    "regression: Guard against schema drift",
    "gpu: Requires CUDA GPU",
]
[tool.ruff]
line-length = 120
[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

