[project]
name = "hallucination-legal-rag-chatbots-gpu"
version = "0.1.0"
description = "GPU pipeline: data processing, embedding generation, model training, evaluation"
requires-python = ">=3.11,<3.12"
dependencies = [
  "ipykernel",
  "jupyterlab",
  "datasets>=2.16",
  "pandas>=2.2.0",
  "numpy>=1.24.0,<2.0.0",
  "torch>=2.0",
  "transformers>=4.35,<4.41",
  "sentence-transformers==3.1.1",
  "accelerate>=0.20",
  "peft>=0.7,<0.10",
  "spacy>=3.7",
  "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",  # pinned; SHA256 verified by setup_nlp.sh
  "langchain>=0.1",
  "faiss-cpu>=1.7",
  "networkx>=3.4.0",
  "evaluate>=0.4",
  "rouge-score>=0.1",
  "wandb>=0.16",
  "tensorboard>=2.14",
  "scikit-learn>=1.5.0",
  "matplotlib",
  "seaborn>=0.13.0",
  "requests",
  "pillow",
  "ipywidgets>=8.1.8",
  "python-dotenv>=1.0",
  "tqdm>=4.66",
  "bm25s>=0.3.2.post1",
  "sentencepiece>=0.2.1",
  "polars>=1.39.3",
  "pydantic>=2.12.5",
]
[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "types-requests>=2.32.4.20260107",
    "pandas-stubs>=2.2",
    "types-tqdm>=4.66",
    "pip-audit>=2.7",
    "cyclonedx-bom>=4.4",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "detect-secrets>=1.5",
    "vulture>=2.15",
    "dvc>=3.67.0",
    "dvc-s3>=3.3.0",
]
[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:importlib._bootstrap",
    "ignore:builtin type swigvarlink:DeprecationWarning",
]
markers = [
    "unit: Pure function tests, no I/O",
    "artifact: Requires setup.sh artifacts (manifest, kernelspec, venv)",
    "integration: Pipeline on frozen fixtures",
    "contract: Schema, provenance, quality thresholds",
    "regression: Guard against schema drift",
    "gpu: Requires CUDA GPU",
]
[tool.ruff]
line-length = 120
[tool.ruff.lint]
per-file-ignores = {"tests/*.py" = ["E402"]}
select = ["E", "F", "I"]
ignore = ["E501"]
[tool.mypy]
ignore_missing_imports = false
[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.parquet", "datasets", "datasets.*", "tqdm"]
ignore_missing_imports = true
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/extract.py",
    "src/manifest_collector.py",
    "src/drift_check.py",
]
[tool.coverage.report]
fail_under = 80
show_missing = true
